--- a/src/components/apply_form_detailPage/apply_form_detailP.css
+++ b/src/components/apply_form_detailPage/apply_form_detailP.css
@@ -1,13 +1,4 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --posts-container-heading-color: var(--secondary-color);
-    --detail-page-header: #F0FFF6;
-    --post-box-detail-btn-hover: #3dbf00;
-    --submit-btn-color: #7CF281;
-}
+@import '../../color.css';
 @keyframes window_Top_To_Bottom{
     from{
         top: -100%;
@@ -44,16 +35,16 @@
     position: relative;
     z-index: 1000;
     /* overflow: hidden; */
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--boxes-shadow-dark);
 }
 .apply_form_detail_page_heading{
     width: 100%;
     padding: 10px;
-    background-color: var(--quaternary-color);
+    background-color: var(--secondary-color);
     display: flex;
     flex-direction: row;
     align-items: center;
-    color: var(--primary-color);
+    /* color: var(--primary-color); */
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -72,7 +63,7 @@
     transform: scale(1.3) rotate(90deg);
 }
 .apply_form_detail_page_head_text{
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
 }
 .apply_form_detail_page_body{
@@ -96,8 +87,8 @@
     cursor: pointer;
 }
 .apply_form_checkbox_accepted{
-    border: 2px solid var(--secondary-color);
-    /* background-color: var(--secondary-color); */
+    border: 2px solid var(--checkbox-accept-color);
+    /* background-color: var(--checkbox-accept-color); */
 }
 .apply_form_checkbox_checkmark::after{
     content: '';
@@ -106,8 +97,8 @@
     left: 6px;
     width: 6px;
     height: 13px;
-    border-bottom: 3px solid var(--secondary-color);
-    border-right: 3px solid var(--secondary-color);
+    border-bottom: 3px solid var(--checkbox-accept-color);
+    border-right: 3px solid var(--checkbox-accept-color);
     transform: rotate(45deg);
 }
 /* logo file input label */
@@ -143,7 +134,7 @@
     content: 'CV yüklə';
     display: inline-block;
     background: var(--secondary-color);
-    color: var(--primary-color);
+    /* color: var(--primary-color); */
     border-radius: 3px;    
     padding: 5px 10px;
     outline: none;
@@ -151,7 +142,7 @@
     -webkit-user-select: none;
     cursor: pointer;
     /* text-shadow: 1px 1px #fff; */
-    font-weight: 700;
+    /* font-weight: 700; */
     font-size: 16px;
 }
 .apply_form_detailP_CV_choose_name{
@@ -163,7 +154,7 @@
     width: 80%;
     margin: 20px auto 0px;
     display: block;
-    background-color: var(--submit-btn-color);
+    background-color: var(--accent-color);
     color: var(--primary-color);
     border: none;
     border-radius: 10px;
@@ -172,10 +163,11 @@
     padding: 5px 30px;
     font-size: 17px;
     font-weight: 500;
+    cursor: pointer;
+    opacity: 0.5;
 }
 .apply_form_detail_page_apply_btn_ready{
     opacity: 1;
-    background-color: var(--secondary-color);
 }
 @media (width <= 400px){
     .apply_form_detail_page_close_btn svg{
