--- a/src/components/custom_select_option/custom_select_option.css
+++ b/src/components/custom_select_option/custom_select_option.css
@@ -1,14 +1,4 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --post-box-border-color: var(--quaternary-color);
-    --location-pin-color: #eb0520;
-    --post-end-time-color: #e4273e; 
-    --post-box-detail-btn-hover: #3dbf00;
-    --light-green: #c2f7aa;
-}
+@import "../../color.css";
 /* select option container */
 .custom_select_option_container{
     width: 100%;
@@ -20,25 +10,28 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--main-border-color);
+    box-shadow: var(--boxes-shadow-light);
+    color: var(--light-text-color);
+    background-color: var(--primary-color);
     border-radius: 10px;
     padding: 5px 10px;
     cursor: pointer;
     user-select: none;
 }
 .custom_select_name_active{
-    background-color: var(--light-green);
-    border: 1px solid var(--light-green);
+    background-color: var(--option-active-bg-color);
+    border: 1px solid var(--option-active-bg-color);
+    color: var(--main-text-color);
 }
 /* select name */
 .custom_select_name{
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 16px;
 }
 /* select option arrow */
 .custom_select_name_container svg{
     font-size: 20px;
-    color: var(--secondary-color);
+    color: var(--light-text-color);
 }
 /* options lists */
 .custom_options_container{
@@ -47,7 +40,8 @@
     overflow-y: auto;    
     transition: max-height 0.5s;
     margin-top: 5px;
-    box-shadow: 1px 1px 2px var(--secondary-color);
+    box-shadow: var(--boxes-shadow-light);
+    background-color: var(--primary-color);
 }
 .custom_options_container::-webkit-scrollbar{
     width: 5px;
@@ -57,16 +51,15 @@
 }
 .custom_options_container::-webkit-scrollbar-thumb{
     border-radius: 5px;
-    background-color: var(--secondary-color);
+    background-color: var(--page-text-slogan-color);
 }
 .custom_options_container::-webkit-scrollbar-thumb:hover{
-    background-color: var(--post-box-detail-btn-hover);
+    background-color: var(--light-text-color);
 }
 /* showing options of custom select */
 .custom_options_show{
     max-height: 300px;
-    border: 1px solid var(--secondary-color);
-    border-radius: 5px;
+    border: 1px solid var(--main-border-color);
 }
 /* hiding options of custom select */
 .custom_options_hide{    
@@ -82,24 +75,21 @@
     padding: 5px 10px;
     cursor: pointer;
     transition: 0.5s ease all;
-    border-bottom: 1px solid var(--secondary-color);
+    border-bottom: 1px solid var(--form-inputs-border-color);
     user-select: none;
+    color: var(--secondary-text-color);
 }
 .custom_options_list_item:hover, .custom_options_sub_list_item:hover{
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
+    background-color: var(--main-border-color);
 }
 /* sub list */
 .custom_options_sub_list_item{
     padding-left: 30px;
     position: relative;
     z-index: 1;
-    background-color: #fff;
-    color: #383838;
 }
 .custom_options_list_selected{
-    background-color: var(--light-green);
-    /* color: var(--primary-color); */
+    background-color: var(--option-active-bg-color);
 }
 .custom_options_list:last-child .custom_options_list_item{
     border-bottom: none;
