--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,24 +1,8 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --footer-bg-color: var(--primary-color);
-    --seperator-color: var(--secondary-color);
-    --footer-active-link: var(--secondary-color);
-    --footer-link-color: var(--quaternary-color);
-}
+@import '../../color.css';
 .footer_container{
     width: 100%;
     max-width: 1440px;
     margin: 0px auto;
-    background-color: var(--footer-bg-color);
-}
-/* footer separator */
-.desktop_footer_seperator{
-    width: 100%;
-    height: 5px;
-    background-color: var(--seperator-color);
 }
 /* footer columns */
 .desktop_footer_columns{
@@ -33,6 +17,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    background: var(--bg-shadow-color);
 }
 .footer_column{
     width: 33.3%;
@@ -65,8 +50,8 @@
     text-transform: uppercase;
     transition: 0.2s ease all;
     font-weight: 500;
-    font-size: 17px;
-    color: var(--footer-link-color);
+    font-size: 15px;
+    color: var(--main-text-color);
     margin-bottom: 10px;
     padding: 5px;
 }
@@ -75,29 +60,28 @@
     position: relative;
 }
 .footer_column_item a:hover{
-    color: var(--secondary-color);
+    color: var(--accent-color);
 }
 .footer_link_underline{
-    width: 100%;
+    width: 0%;
     height: 2px;
     position: absolute;
     left: 0px;
     bottom: -2px;
-    background-color: var(--secondary-color);
-    display: none;
+    background-color: var(--accent-color);
+    transition: 0.5s all;
 }
 .footer_column_item a:hover .footer_link_underline{
-    display: block;
-    animation: 0.5s progress;
+    width: 100%;
 }
 /* pages active link */
 .footer_active_link{
-    color: var(--footer-active-link) !important;
+    color: var(--accent-color) !important;
 }
 /* footer cloumn head */
 .footer_column_head{
-    color: var(--footer-link-color);
-    font-size: 17px;
+    color: var(--main-text-color);
+    font-size: 15px;
     font-weight: 500;
     padding: 5px;
     margin-bottom: 10px;
@@ -115,7 +99,7 @@
     margin-right: 10px;
 }
 .footer_social_icons a svg{
-    transition: 0.1s all;
+    transition: 0.3s all;
 }
 /* instagram */
 .footer_instagram{
@@ -136,21 +120,22 @@
 /* copyright */
 .desktop_footer_copyright_container{
     width: 100%;
-    background-color: var(--quaternary-color);
+    background-color: var(--copyright-box-bg-color);
     padding: 10px;
+    border-top: 1px solid var(--light-text-color);
 }
 .desktop_footer_info{
     width: 80%;
     margin: 0px auto 5px;
     text-align: center;
-    color: var(--primary-color);
+    color: var(--main-text-color);
     font-size: 14px;
 }
 .desktop_footer_copyright{
     width: 80%;
     margin: 0px auto;
     text-align: center;
-    color: var(--primary-color);
+    color: var(--main-text-color);
     font-size: 13px;
 }
 @media (width <= 600px){
