--- a/src/components/forgot_password_form/forgot_password_form.css
+++ b/src/components/forgot_password_form/forgot_password_form.css
@@ -1,10 +1,4 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --black-color: #000;
-}
+@import '../../color.css';
 @keyframes from_right_to_left{
     0%{
         right: -60%;
@@ -28,11 +22,11 @@
     position: relative;
     /* z-index: 10;
     top: 0px; */
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
     /* -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
     -moz-box-shadow: 0px 2px 5px 0px var(--secondary-color);
     box-shadow: 0px 2px 5px 0px var(--secondary-color); */
-    border: 3px solid var(--secondary-color);
+    /* border: 1px solid var(--main-border-color); */
     border-radius: 10px;
     padding: 20px;    
 }
@@ -51,14 +45,15 @@
     justify-content: flex-start;   
     margin-bottom: 20px; 
     align-items: center;
-    font-size: 18px;
-    color: var(--quaternary-color);
+    font-size: 16px;
+    color: var(--main-text-color);
     cursor: pointer;
     user-select: none;
 }
 .forgot_password_form_window_close svg{
-    font-size: 30px;        
+    font-size: 25px;        
     margin-right: 5px;
+    transition: 0.3s all;
 }
 .forgot_password_form_window_close:hover svg{
     transform: scale(1.1);
@@ -67,25 +62,37 @@
 .forgot_password_form_info{
     font-size: 15px;
     margin-bottom: 25px;
+    color: var(--secondary-text-color);
 }
 .forgot_password_form{
     width: 100%;
 }
-.forgot_password_form label{
+.forgot_password_form_label_input{
     width: 100%;
-    display: flex;
-    flex-direction: column;
     margin-bottom: 5px;
-    color: var(--quaternary-color);
 }
-.forgot_password_form label input{
+.forgot_password_form_label_input label{
+    font-size: 16px;
+    color: var(--main-text-color);
+    position: relative;
+}
+.forgot_password_form_label_input label::after{
+    position: absolute;
+    content: '*';
+    right: -10px;
+    top: 3px;
+    color: var(--clock-end-color);
+}
+.forgot_password_form_label_input input{
     width: 100%;
     padding: 10px;
     outline: none;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--form-inputs-border-color);
     border-radius: 5px;
     margin-top: 3px;
     font-size: 16px;
+    color: var(--secondary-text-color);
+    background-color: var(--primary-color);
 }
 .forgot_password_form_error_message{
     font-size: 13px;
@@ -93,25 +100,21 @@
 }
 /* form submit */
 .forgot_password_form_submit{
-    width: 50%;
-    min-width: 130px;
+    width: 100%;
     display: block;
-    margin: 40px auto 0px;
-    font-size: 18px;
+    margin-top: 40px;
+    font-size: 16px;
     outline: none;
     border: none;
     border-radius: 10px;
-    background-color: var(--secondary-color);
+    background-color: var(--accent-color);
     color: var(--primary-color);
     padding: 10px 30px;
     text-align: center;
     user-select: none;
     cursor: pointer;
+    opacity: 0.5;
 }
-@media (width <= 500px){
-    .forgot_password_form_submit{
-        width: 100%;
-        min-width: unset;
-        font-size: 16px;
-    }
+.forgot_password_form_submit_ready{
+    opacity: 1;
 }
