--- a/src/components/page_head_text/page_head_text.css
+++ b/src/components/page_head_text/page_head_text.css
@@ -1,25 +1,21 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-}
+@import "../../color.css";
 .page_head_text_container{
     width: 100%;
     text-align: center;
     padding: 10px;
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 20px;
-    font-weight: 600;
+    font-weight: 500;
     background-color: var(--secondary-color);
-    color: var(--primary-color);
+    color: var(--main-text-color);
     user-select: none;
     letter-spacing: 5px;
     text-transform: uppercase;
+    box-shadow: var(--boxes-shadow-light);
 }
-@media (width <= 400px){
+@media (width <= 550px){
     .page_head_text_container{
-        font-size: 18px;
+        font-size: 17px;
         letter-spacing: 2px;
     }
 }
