--- a/src/components/password_checker/password_checker.css
+++ b/src/components/password_checker/password_checker.css
@@ -1,10 +1,4 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --black-color: #000;
-}
+@import '../../color.css';
 .password_checker_container{
     width: 100%;
     display: flex;
@@ -21,14 +15,14 @@
 .password_checker_row_color{
     width: 15px;
     height: 15px;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--form-psw-ch-color);
     border-radius: 100%;
     margin-right: 10px;
 }
 .password_checker_row_color_active{
-    background-color: var(--secondary-color);
+    background-color: var(--form-psw-ch-color);
 }
 .password_checker_row_text{
     font-size: 13px;
-    color: var(--quaternary-color);
+    color: var(--light-text-color);
 }
