--- a/src/components/sendOtpForm/sendOtpForm.css
+++ b/src/components/sendOtpForm/sendOtpForm.css
@@ -1,10 +1,4 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --black-color: #000;
-}
+@import '../../color.css';
 @keyframes from_right_to_left{
     0%{
         right: -60%;
@@ -38,10 +32,10 @@
     position: relative;
     /* z-index: 11;
     top: 0px; */
-    background-color: var(--primary-color);
-    border: 3px solid var(--secondary-color);
+    /* background-color: var(--primary-color); */
+    /* border: 1px solid var(--main-border-color); */
     border-radius: 10px;
-    /* box-shadow: 0px 2px 2px 1px rgb(0,0,0, 0.3); */
+    /* box-shadow: var(--boxes-shadow-dark); */
     padding: 40px 20px;    
 }
 .send_top_form_container_signup{
@@ -59,14 +53,22 @@
     width: 100%;
     /* margin-top: 50px; */
 }
-.send_top_form label{
+.send_top_form_label_input{
     width: 100%;
-    display: flex;
-    flex-direction: column;
     margin-bottom: 10px;
     font-size: 16px;
-    font-weight: 500;
     color: var(--quaternary-color);
+}
+.send_top_form_label_input label{
+    font-size: 16px;
+    position: relative;
+}
+.send_top_form_label_input label::after{
+    position: absolute;
+    content: '*';
+    right: -10px;
+    top: 3px;
+    color: var(--clock-end-color);
 }
 /* error message */
 .send_otp_form_error_message{
@@ -76,9 +78,10 @@
 }
 /* otp form input */
 .send_top_form_input{
+    width: 100%;
     padding: 10px;
     outline: none;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--form-inputs-border-color);
     border-radius: 5px;
     margin-top: 3px;
     font-size: 16px;
@@ -90,24 +93,25 @@
     font-weight: 500;
 }
 .send_otp_again_btn{
-    width: 40%;
-    min-width: 160px;
+    width: 50%;
+    min-width: 190px;
     display: block;
     margin: 20px auto 0px;
-    background-color: var(--quaternary-color);
-    color: var(--primary-color);
-    border: none;
+    background-color: var(--primary-color);
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+    /* border: none; */
     border-radius: 10px;
-    padding: 5px 10px;
-    font-size: 18px;
+    padding: 10px 30px;
+    font-size: 16px;
     font-weight: 500;
     cursor: pointer;
     user-select: none;
+    /* text-decoration: underline; */
 }
 .send_otp_form_submit_btn_container{
-    width: 50%;
-    min-width: 130px;
-    margin: 20px auto 0px;
+    width: 100%;
+    margin-top: 20px;
     position: relative;
 }
 .send_otp_form_submit{
@@ -117,7 +121,7 @@
     outline: none;
     border: none;
     border-radius: 10px;
-    background-color: var(--secondary-color);
+    background-color: var(--accent-color);
     color: var(--primary-color);
     padding: 10px 30px;
     text-align: center;
@@ -132,14 +136,14 @@
 .send_otp_form_submit_btn_loader{
     position: absolute;
     top: 11px;
-    left: 30px;
+    left: 20%;
     width: 20px;
     height: 20px;
     z-index: 1;
     border-top: 2px solid var(--primary-color);
     border-right: 2px solid var(--primary-color);
     border-bottom: 2px solid var(--primary-color);
-    border-left: 2px solid var(--secondary-color);
+    border-left: 2px solid var(--accent-color);
     border-radius: 50%;
     animation: form_submit_spinner 1s linear infinite;
 }
