--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,17 +1,6 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --post-box-border-color: var(--quaternary-color);
-    --location-pin-color: #eb0520;
-    --post-end-time-color: #e4273e; 
-    --post-box-detail-btn-hover: #3dbf00;
-}
 .home_slider_container{
     width: 100%;
     position: relative;
-    border-bottom: 5px solid var(--secondary-color);
 }
 .home_page_slider{
     width: 100%;
@@ -30,7 +19,7 @@
     right: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.306);
+    background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,6 +31,9 @@
     color: white;
     text-transform: uppercase;
     text-align: center;
+    /* overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis; */
 }
 @media (width <= 1220px){
     .home_slider_slogan_text{
