--- a/src/components/update_password_form/update_password_form.css
+++ b/src/components/update_password_form/update_password_form.css
@@ -1,10 +1,4 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --black-color: #000;
-}
+@import '../../color.css';
 @keyframes from_right_to_left{
     0%{
         right: -60%;
@@ -23,15 +17,8 @@
 }
 .update_password_form_container{
     width: 100%;
-    /* height: 100%; */
     position: relative;
-    /* z-index: 12;
-    top: 0px; */
-    background-color: var(--primary-color);
-    /* -webkit-box-shadow: 0px 2px 5px 0px var(--secondary-color);
-    -moz-box-shadow: 0px 2px 5px 0px var(--secondary-color);
-    box-shadow: 0px 2px 5px 0px var(--secondary-color); */
-    border: 3px solid var(--secondary-color);
+    /* border: 1px solid var(--main-border-color); */
     border-radius: 10px;
     padding: 20px;    
 }
@@ -41,31 +28,41 @@
 .update_password_form_close_animation{
     animation: 0.5s from_left_to_right;
 }
-.update_password_form label{
+.update_password_form_label_input{
     width: 100%;
-    display: flex;
-    flex-direction: column;
     margin-bottom: 20px;
+}
+.update_password_form_label_input label{
     font-size: 16px;
-    font-weight: 500;
-    color: var(--quaternary-color);
+    color: var(--main-text-color);
+    position: relative;
+}
+.update_password_form_label_input label::after{
+    position: absolute;
+    content: '*';
+    right: -10px;
+    top: 3px;
+    color: var(--clock-end-color);
 }
 /* form submit */
 .update_password_form_submit{
-    width: 60%;
-    min-width: 180px;
+    width: 100%;
     display: block;
-    margin: 20px auto 0px;
-    font-size: 18px;
+    margin-top: 20px;
+    font-size: 16px;
     outline: none;
     border: none;
     border-radius: 10px;
-    background-color: var(--secondary-color);
+    background-color: var(--accent-color);
     color: var(--primary-color);
     padding: 10px 30px;
     text-align: center;
     user-select: none;
     cursor: pointer;
+    opacity: 0.5;
+}
+.update_password_form_submit_ready{
+    opacity: 1;
 }
 @media (width <= 500px){
     .update_password_form_submit{
