--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,32 +1,21 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-}
+@import '../../color.css';
 .about_page_container{
     width: 80%;
     margin: 0px auto;
     padding: 50px 10px;
 }
-.about_page_head{
-    width: 100%;
-    font-size: 30px;
-    color: var(--secondary-color);
-    font-weight: 500;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 20px;
-}
 /* about page information */
+.about_page_information:first-child{
+    margin-top: 40px;
+}
 .about_page_information{
     width: 100%;
     margin-bottom: 50px;
 }
 .about_page_information_head{
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 10px;
-    color: var(--quaternary-color);
+    font-weight: 500;
 }
 .about_page_information_body{
     width: 100%;
@@ -36,18 +25,18 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    color: var(--secondary-text-color);
 }
 .about_page_information_list li{
     width: 100%;
     padding: 10px 30px;
-    /* list-style: circle; */
     position: relative;
 }
 .about_page_information_list li::before{
     content: '';
     width: 6px;
     height: 6px;
-    border: 2px solid var(--secondary-color);
+    border: 2px solid var(--page-text-slogan-color);
     border-radius: 6px;
     position: absolute;
     left: 10px;
@@ -61,7 +50,7 @@
         font-size: 20px;
     }
     .about_page_information_head{
-        font-size: 18px;
+        font-size: 16px;
     }
     .about_page_information_list li{
         padding: 10px 20px;
