--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,10 +1,4 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --contact-letter-form-btn-hover: #3dbf00;
-}
+@import '../../color.css';
 .contact_page_container{
     width: 70%;
     margin: 0px auto;
@@ -13,10 +7,9 @@
 /* slogan  */
 .contact_page_slogan{
     width: 100%;
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
     font-weight: 500;
-    color: var(--quaternary-color);
     margin: 100px 0px 40px;
 }
 /* contact boxes container */
@@ -33,13 +26,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: var(--primary-color);
+    box-shadow: var(--boxes-shadow-dark);
+    cursor: pointer;
 }
 /* box icon */
 .contact_page_box_icon{
     width: 60px;
     min-width: 60px;
     height: 60px;
-    border: 3px solid var(--secondary-color);
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -49,7 +44,7 @@
 }
 .contact_page_box_icon svg{
     font-size: 25px;
-    color: var(--secondary-color);    
+    color: var(--accent-color);    
 }
 .contact_page_box:hover .contact_page_box_icon{
     transform: scale(1.1);
@@ -58,6 +53,18 @@
     width: 70%;
     font-size: 16px;
     font-weight: 500;
+    color: var(--secondary-text-color);
+}
+.contact_page_map{
+    width: 100%;
+    height: 200px;
+    max-width: 700px;
+    margin: 100px auto;
+    box-shadow: var(--boxes-shadow-dark);
+}
+.contact_page_map iframe{
+    width: 100%;
+    height: 100%;
 }
 /* social network links */
 .contact_page_social_icons{
@@ -96,35 +103,48 @@
 .contact_page_form{
     width: 80%;
     margin: 0px auto;
-    border: 2px solid var(--quaternary-color);
+    border: 2px solid var(--main-border-color);
     border-radius: 10px;
     padding: 20px 30px;
     display: flex;
     flex-direction: row;
-    /* align-items: flex-start; */
     justify-content: space-between;
     flex-wrap: wrap;
+    box-shadow: var(--boxes-shadow-dark);
+    background-color: var(--primary-color);
 }
-.contact_page_form label{
+.contact_page_form_label_input{
     width: 45%;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     margin-bottom: 20px;
-    color: var(--quaternary-color);
+    position: relative;
 }
-.contact_page_form label input, .contact_page_form label textarea{
+.contact_page_form_label_input label{
+    position: relative;
+}
+.contact_page_form_label_input label::after{
+    position: absolute;
+    content: '*';
+    right: -10px;
+    top: 3px;
+    color: var(--clock-end-color);
+}
+.contact_page_form_label_input input, .contact_page_form_label_input textarea{
     width: 100%;
     margin-top: 3px;
     padding: 10px;
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--form-inputs-border-color);
     border-radius: 5px;
     outline: none;
     font-size: 16px;
+    background-color: var(--primary-color);
+    color: var(--secondary-text-color);
 }
-.contact_page_form label:has(textarea){
+.contact_page_form_label_input:has(textarea){
     width: 100%;
 }
-.contact_page_form label textarea{
+.contact_page_form_label_input textarea{
     max-width: 100%;
     min-width: 100%;
 }
@@ -140,20 +160,23 @@ input[type=number] {
 }
 /* form submit button */
 .contact_page_form_submit{
+    width: 80%;
+    max-width: 360px;
     margin: 0px auto;
     padding: 10px 30px;
     border-radius: 10px;
     outline: none;
     border: none;
-    background-color: var(--secondary-color);
+    background-color: var(--accent-color);
     color: var(--primary-color);
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
     margin-top: 40px;
+    transition: 0.3s all;
 }
 .contact_page_form_submit:hover{
-    background-color: var(--contact-letter-form-btn-hover);
+    background-color: var(--accent-hover);
 }
 /* contact page subscribe form */
 .contact_page_subscribe_form{
@@ -181,6 +204,7 @@ input[type=number] {
     .contact_page_box{
         width: 60%;
         justify-content: unset;
+        margin-bottom: 20px;
     }
     .contact_page_social_icons a{
         margin-right: 30px;
@@ -189,25 +213,25 @@ input[type=number] {
         width: 60%;
     }
     .contact_page_form{
-        width: 65%;
+        width: 80%;
         justify-content: unset;
+        border: none;
+        background-color: transparent;
+        box-shadow: unset;
     }
-    /* .contact_page_form label input, .contact_page_form label textarea{
-        padding: 5px;
-    } */
-    .contact_page_form label{
+    .contact_page_form_label_input{
         width: 100%;
     }
     .contact_page_form_submit{
-        width: 50%;
-        min-width: 150px;
+        width: 100%;
+        max-width: unset;
         margin-top: 20px;
         font-size: 16px;
     }
 }
 @media (width <= 500px){
     .contact_page_slogan{
-        font-size: 20px;
+        font-size: 18px;
     }
     .contact_page_box{
         width: 100%;
@@ -222,7 +246,15 @@ input[type=number] {
         width: 100%;
         padding: 20px;
     }   
+    .contact_page_form_submit{
+        margin: 20px 0px 0px;
+    }
     .contact_page_subscribe_form{
         width: 100%;
+    }
+}
+@media (width <= 350px){
+    .contact_page_slogan{
+        font-size: 16px;
     }
 }
