--- a/src/pages/vacancies/vacancies.css
+++ b/src/pages/vacancies/vacancies.css
@@ -1,44 +1,37 @@
-:root{
-    --primary-color: #fff;
-    --secondary-color: #40cb00;
-    --tertiary-color: #2a8301;
-    --quaternary-color: #45A6FF;
-    --post-box-border-color: var(--quaternary-color);
-    --location-pin-color: #eb0520;
-    --post-end-time-color: #e4273e; 
-    --post-box-detail-btn-hover: #3dbf00;
-}
+@import '../../color.css';
 .vacancies_page_slider_and_search{
     width: 100%;
     position: relative;
 }
-/* slider core */
-.vacancies_page_slider_core{
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.vacancies_page_slogan{
+    width: 95%;
+    margin: 0px auto 50px;
+    padding-top: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    color: var(--page-text-slogan-color);
+    text-transform: uppercase;
+    user-select: none;
+}
+.vacancies_page_slogan span{
+    font-size: 25px;
+    color: var(--page-text-act-slogan);
 }
 .vacancies_page_job_search_container{
-    width: 100%;
-    height: 50%;
-    background-color: var(--secondary-color);
-    opacity: 0.9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 90%;
+    max-width: 450px;
+    margin: 0px auto;
 }
 /* job search form  */
 .vacancies_page_job_search_form{
-    width: 80%;
-    max-width: 600px;
-    /* margin: 0px auto; */
+    width: 100%;
     position: relative;
+    border: 1px solid var(--accent-color);
+    border-radius: 10px;
+    box-shadow: var(--boxes-shadow-dark);
+    overflow: hidden;
 }
 /* job search form input */
 .vacancies_page_job_search_form input{
@@ -48,20 +41,24 @@
     border: none;
     border-radius: 10px;
     font-size: 18px;
+    background-color: var(--primary-color);
 }
 .vacancies_page_job_search_form_submit{
+    width: 37px;
+    height: 30px;
+    background-color: var(--accent-color);
     position: absolute;
     z-index: 1;
     right: 10px;
-    top: 12px;
-    background: transparent;
+    top: 13%;
     border: none;
+    border-radius: 10px;
     outline: none;
     cursor: pointer;
 }
 .vacancies_page_job_search_form_submit svg{
     font-size: 18px;
-    color: var(--tertiary-color);
+    color: var(--primary-color);
 }
 /* filter and vacancies boxes container */
 .vacancies_filters_and_boxes_container{
@@ -107,11 +104,11 @@
         display: flex;
         width: 110px;
         padding: 10px;
-        border: 1px solid var(--secondary-color);
+        border: 1px solid var(--accent-color);
         border-radius: 10px;
         flex-direction: row;
         align-items: center;
-        font-weight: 500;
+        /* font-weight: 500; */
         cursor: pointer;
         user-select: none;
         margin: 0px 0px 50px 10px;
@@ -119,7 +116,7 @@
     .vacancy_page_filters_button svg{
         margin-right: 10px;
         font-size: 20px;
-        color: var(--secondary-color);
+        color: var(--accent-color);
     }
     @keyframes from_right_to_left{
         0%{
@@ -147,22 +144,26 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        font-size: 22px;
+        font-size: 18px;
         cursor: pointer;
         transition: 0.1s all;
         margin-bottom: 10px;
     }
     .vacancies_page_filters_mobile_close svg{
         margin-right: 5px;
-        font-size: 22px;
+        font-size: 20px;
     }
     .vacancies_page_filters_mobile_close:hover{
         transform: scale(1.05);
     }
 }
 @media (width <= 500px){
-    .vacancies_page_job_search_form{
-        width: 95%;
+    .vacancies_page_slogan{
+        font-size: 18px;
+        margin-bottom: 30px;
+    }
+    .vacancies_page_slogan span{
+        font-size: 23px;
     }
     .vacancies_page_job_search_form input{
         font-size: 15px;
@@ -172,13 +173,22 @@
         font-size: 12px;
     }
     .vacancies_page_job_search_form_submit{
-        top: 9px;
+        width: 28px;
+        height: 22px;
+        /* top: 11%; */
     }
     .vacancies_page_job_search_form_submit svg{
-        font-size: 16px;
+        font-size: 13px;
     }    
 }
 @media (width <= 400px){
+    .vacancies_page_slogan{
+        font-size: 17px;
+        margin-bottom: 30px;
+    }
+    .vacancies_page_slogan span{
+        font-size: 19px;
+    }
     .vacancies_page_job_search_container{
         height: 60%;
     }
